# evo-ssa-tools

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  codecov.yml  rustfmt.toml
crates/evo-marker/: Cargo.toml  README.md
crates/evo-marker/benches/: alloc_default.rs  alloc_jemalloc.rs  alloc_mimalloc.rs  basic.rs  distance.rs  jaccard.rs  ssa.rs  tree_analysis.rs
crates/evo-marker/benches/common/: alloc_benches.rs
crates/evo-marker/src/: ecdna.rs  lib.rs  testutils.rs
crates/evo-marker/src/lineage/: analysis.rs  mod.rs  node.rs
crates/evo-marker/src/util/: bitop.rs  distributions.rs  hashers.rs
crates/evo-ssa/: Cargo.toml  README.md
crates/evo-ssa/benches/: workloads.rs
crates/evo-ssa/docs/: design.md
crates/evo-ssa/examples/: birth_death.rs
crates/evo-ssa/src/: engine.rs  error.rs  lib.rs  model.rs  random.rs
crates/evo-ssa/src/scheduler/: direct.rs  family.rs  math.rs  mod.rs  nrm.rs  nrm_clock.rs  update.rs  weighted.rs
crates/evo-ssa/tests/: basic_schedulers.rs  cache_oracle.rs  exactness.rs
crates/frequency/: Cargo.toml  README.md  TODO.md
crates/frequency/benches/: baseline.rs  bounded_freq.rs  common.rs  hash_freq.rs  manual.rs
crates/frequency/src/: iter.rs  lib.rs  num_traits.rs  par_iter.rs
crates/marker/: Cargo.toml  README.md
crates/marker/benches/: criterion.rs  ssa.rs  tree_analysis.rs
crates/marker/src/: lib.rs
crates/marker/src/lineage/: analysis.rs  node.rs
crates/marker/src/mutations/: analysis.rs  mod.rs
crates/marker/src/util/: count.rs  distributions.rs  hashers.rs  mod.rs
crates/scs/: Cargo.toml
crates/scs/src/: hex.rs  main.rs
crates/segment-cache-store/: Cargo.toml  README.md
crates/segment-cache-store/benches/: append_publish.rs  comparison.rs  compression.rs  ordered_lookup.rs  parameter_evolution.rs  physical_format.rs  workload.rs
crates/segment-cache-store/benches/workload/: append_publish.rs  backends.rs  comparison.rs  compression.rs  data.rs  ordered_lookup.rs  parameter_evolution.rs  physical_format.rs  profile.rs  scenarios.rs  segment_sizing.rs
crates/segment-cache-store/benchmark-baselines/4cdc470-m1-large-blocks/: README.md  criterion.tsv
crates/segment-cache-store/benchmark-baselines/9f8b2e6-m1/: README.md  criterion.tsv
crates/segment-cache-store/benchmark-baselines/b093515-m1/: README.md  criterion.tsv
crates/segment-cache-store/benchmark-baselines/relative-key-routing-20260713-m1/: README.md  criterion.tsv
crates/segment-cache-store/benchmark-baselines/segment-sizing-20260713-m1/: README.md  criterion.tsv  layout.tsv  profiles-criterion.tsv  profiles-layout.tsv
crates/segment-cache-store/benchmark-baselines/v1-format-20260713-m1/: README.md  criterion.tsv  space.tsv
crates/segment-cache-store/docs/: benchmark.md  design.md  remote-blob-design.md  remote-implementation.md  remote-version-format.md
crates/segment-cache-store/examples/: space_usage.rs
crates/segment-cache-store/src/: batch.rs  binary.rs  block.rs  cursor.rs  error.rs  format.rs  key.rs  lib.rs  limits.rs  lookup.rs  manifest.rs  options.rs  record.rs  state.rs  store.rs  tests.rs  value.rs
crates/segment-cache-store/src/block/: checksum.rs  compression.rs  decode.rs  encode.rs  layout.rs  mod.rs
crates/segment-cache-store/src/catalog/: create.rs  descriptor.rs  error.rs  gc.rs  io.rs  manifest.rs  mod.rs  open.rs  paths.rs  storage.rs  visibility.rs
crates/segment-cache-store/src/commit/: batch.rs  execution.rs  merge.rs  mod.rs  options.rs  plan.rs  publish.rs
crates/segment-cache-store/src/engine/: catalog.rs  commit.rs  create.rs  gc.rs  io.rs  mod.rs  open.rs  paths.rs  runtime.rs  segment_file.rs  storage.rs
crates/segment-cache-store/src/error/: mod.rs  persistence.rs
crates/segment-cache-store/src/format/: binary.rs  checksum.rs  compression.rs  error.rs  manifest.rs  metadata.rs  mod.rs  record.rs  segment.rs  store_file.rs  value.rs
crates/segment-cache-store/src/io/: mod.rs
crates/segment-cache-store/src/read/: cursor.rs  lookup.rs  mod.rs  point.rs
crates/segment-cache-store/src/schema/: geometry.rs  metadata.rs  mod.rs  value.rs
crates/segment-cache-store/src/segment/: block.rs  content_id.rs  file.rs  fingerprint.rs  format.rs  geometry.rs  index.rs  io.rs  mod.rs  state.rs  writer.rs
crates/segment-cache-store/src/snapshot/: mod.rs  ordered.rs  point.rs  range.rs
crates/segment-cache-store/src/store/: mod.rs  state.rs
crates/segment-cache-store/src/write/: batch.rs  commit.rs  merge.rs  mod.rs  options.rs
crates/segment-cache-store/tests/: store.rs
crates/segment-cache-store/tests/store/: common.rs  corruption.rs  input_invariants.rs  main.rs  manifest_and_open.rs  merge.rs  ordered_lookup.rs  range_scan.rs  recovery.rs  steady_state.rs  write_path.rs
crates/ssa-cache/: Cargo.toml  README.md
crates/ssa-cache-schema/: Cargo.toml  README.md
crates/ssa-cache-schema/src/: impls.rs  lib.rs  writer.rs
crates/ssa-cache-schema/src/impls/: atomics.rs  collections.rs  mod.rs  nonzero.rs  primitives.rs  scalars.rs  sequences.rs  text.rs  transparent.rs  tuples.rs
crates/ssa-cache-schema/tests/: derive.rs  derive_compile.rs  manual.rs
crates/ssa-cache-schema/tests/derive/: derive_attrs.rs  derive_enums.rs  derive_generics.rs  derive_golden.rs  derive_names.rs  derive_structs.rs
crates/ssa-cache-schema/tests/ui/: fail_duplicate_crate_attr.rs  fail_duplicate_crate_attr.stderr  fail_duplicate_field_attr.rs  (+22 more)
crates/ssa-cache/src/: cache.rs  deterministic.rs  error.rs  lib.rs  multi.rs  pipeline.rs  single.rs  stochastic.rs
crates/ssa-pipeline/: Cargo.toml  RANDOM_STREAMS.md  README.md
crates/ssa-pipeline/src/: deterministic.rs  error.rs  lib.rs  pipeline.rs  stochastic.rs
crates/ssa-workflow/: Cargo.toml  README.md
crates/ssa-workflow-derive/: Cargo.toml
crates/ssa-workflow-derive/src/: lib.rs
crates/ssa-workflow-derive/tests/: runtime.rs  ui.rs
crates/ssa-workflow/src/: error.rs  identity.rs  lib.rs  prelude.rs
crates/ssa-workflow/tests/: cache_integration.rs  execution_integration.rs  managed_cache_identity.rs  ssa_workflow.rs
(+163 files in other folders)
