[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bitcode = { version = "0.6", default-features = false, features = ["std"] }
blake3 = { version = "1.8.2" }
criterion = { version = "0.8.2" }
divan = { version = "0.1.17" }
evo-marker = { path = "crates/evo-marker" }
fjall = { version = "3", default-features = false }
frequency = { path = "crates/frequency", version = "0.1" }
nohash-hasher = { version = "0.2.0" }
rand = { version = "0.9" }
rand_xoshiro = { version = "0.7" }
rayon = { version = "1.10.0" }
tempfile = { version = "3.20.0" }
thiserror = { version = "2" }
zerocopy = { version = "0.8.26" }

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(coverage,coverage_nightly)",
] }

[profile.release]
lto = "fat"
codegen-units = 1
