[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bitcode = { version = "0.6", default-features = false, features = ["std"] }
blake3 = { version = "1.8.2" }
crc32c = { version = "0.6" }
criterion = { version = "0.8.2" }
evo-marker = { path = "crates/evo-marker" }
fjall3 = { package = "fjall", version = "3", default-features = false }
frequency = { path = "crates/frequency", version = "0.2" }
lz4_flex = { version = "0.12", default-features = false, features = ["std"] }
log = { version = "0.4" }
lru = { version = "0.18" }
nohash-hasher = { version = "0.2.0" }
parking_lot = { version = "0.12" }
postcard = { version = "1.1", default-features = false }
proc-macro2 = { version = "1" }
quote = { version = "1" }
rand = { version = "0.10", default-features = false, features = ["alloc"] }
rapidhash = { version = "4.2.2" }
rayon = { version = "1.10.0" }
serde = { version = "1", default-features = false }
ssa-cache-schema = { path = "crates/ssa-cache-schema", version = "0.1" }
ssa-cache-schema-derive = { path = "crates/ssa-cache-schema-derive", version = "0.1" }
syn = { version = "2", features = ["derive", "parsing", "printing", "proc-macro"] }
tempfile = { version = "3.20.0" }
thiserror = { version = "2" }
trybuild = { version = "1" }
zerocopy = { version = "0.8.26" }
zstd = { version = "0.13", default-features = false }

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(coverage,coverage_nightly)",
] }

[profile.release]
lto = "fat"
codegen-units = 1
