[package]
name = "evo-marker"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bench]]
harness = false
name = "tree_analysis"

[dependencies]
bitcode = { workspace = true, features = ["derive"], optional = true }
frequency = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rand = { workspace = true, features = ["os_rng", "small_rng"] }

[features]
bitcode = ["dep:bitcode"]

[lints]
workspace = true
