[package]
name = "evo-marker"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bench]]
harness = false
name = "basic"
required-features = ["testutils"]

[[bench]]
harness = false
name = "distance"
required-features = ["testutils"]

[[bench]]
harness = false
name = "jaccard"
required-features = ["testutils"]

[[bench]]
harness = false
name = "alloc_default"
required-features = ["testutils"]

[[bench]]
harness = false
name = "alloc_jemalloc"
required-features = ["testutils"]

[[bench]]
harness = false
name = "alloc_mimalloc"
required-features = ["testutils"]

[dependencies]
bitcode = { workspace = true, features = ["derive"], optional = true }
frequency = { workspace = true }
rand = { workspace = true }
rand_distr = { version = "0.6", default-features = false, features = ["std"] }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6" }
mimalloc = "0.1"
rand = { workspace = true }

[features]
bitcode = ["dep:bitcode"]
testutils = []

[lints]
workspace = true
