[package]
name = "frequency"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bench]]
harness = false
name = "bounded_freq"

[dependencies]
rayon = { workspace = true, optional = true }

[dev-dependencies]
divan = { workspace = true }
nohash-hasher = { workspace = true }
rand = { workspace = true, features = ["os_rng", "small_rng"] }
zerocopy = { workspace = true }

[features]
parallel = ["dep:rayon"]

[lints]
workspace = true
