[package]
name = "frequency"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bench]]
harness = false
name = "bounded_freq"

[[bench]]
harness = false
name = "hash_freq"

[dependencies]
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
nohash-hasher = { workspace = true }
rand = { workspace = true }
rapidhash = { workspace = true }

[features]
parallel = ["dep:rayon"]

[lints]
workspace = true
