[package]
name = "evo-marker"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
bitcode = ["dep:bitcode"]

[dependencies]
bitcode = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["os_rng", "small_rng"] }
