[package]
name = "evo-marker"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
bitcode = ["dep:bitcode"]

[dependencies]
bitcode = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
iai-callgrind = "0.14.0"
rand = { workspace = true, features = ["os_rng", "small_rng"] }

[[bench]]
name = "criterion"
harness = false
