[package]
name = "evo-marker"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
bitcode = ["dep:bitcode"]

[dependencies]
bitcode = { workspace = true, features = ["derive"], optional = true }
frequency = { workspace = true, features = ["parallel"] }
rand = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true, features = ["os_rng", "small_rng"] }

[[bench]]
name = "tree_analysis"
harness = false
