[package]
name = "scs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
segment-cache-store = { path = "../segment-cache-store", default-features = false }

[features]
default = ["segment-cache-store/default"]
checksum-crc32c = ["segment-cache-store/checksum-crc32c"]
checksum-rapidhash = ["segment-cache-store/checksum-rapidhash"]
value-compression-lz4 = ["segment-cache-store/value-compression-lz4"]
value-compression-zstd = ["segment-cache-store/value-compression-zstd"]

[lints]
workspace = true
