[package]
name = "ssa-cache-schema"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
ssa-cache-schema-derive = { workspace = true, optional = true }

[dev-dependencies]
trybuild = { workspace = true }

[features]
default = ["derive"]
derive = ["dep:ssa-cache-schema-derive"]

[lints]
workspace = true
