[package]
name = "ssa-cache"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bitcode = { workspace = true, optional = true }
blake3 = { workspace = true }
fjall = { workspace = true, default-features = false, optional = true }
lz4_flex = { workspace = true, optional = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
evo-marker = { workspace = true, features = ["bitcode"] }
tempfile = { workspace = true }

[features]
default = ["bitcode", "lz4"]
bitcode = ["dep:bitcode"]
fjall = ["dep:fjall"]
lz4 = ["dep:lz4_flex"]

[lints]
workspace = true
