[package]
name = "ssa-cache"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bitcode = { workspace = true, optional = true }
blake3 = { workspace = true }
crc32c = { workspace = true, optional = true }
fjall = { workspace = true, default-features = false, optional = true }
lz4_flex = { workspace = true, optional = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
evo-marker = { workspace = true, features = ["bitcode"] }
tempfile = { workspace = true }

[features]
default = ["bitcode"]
bitcode = ["dep:bitcode"]
compress = ["dep:crc32c"]
fjall = ["dep:fjall"]
lz4 = ["compress", "dep:lz4_flex"]

[lints]
workspace = true
