[package]
name = "ssa-pipeline"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bitcode = { workspace = true, optional = true }
blake3 = { workspace = true }
crc32c = { workspace = true }
fjall2 = { workspace = true, default-features = false, optional = true }
fjall3 = { workspace = true, default-features = false, optional = true }
lz4_flex = { workspace = true, optional = true }
parking_lot = { workspace = true }
postcard = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
redb = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
zstd = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["bitcode"]
bitcode = ["dep:bitcode"]
compress = []
fjall2 = ["dep:fjall2"]
fjall3 = ["dep:fjall3"]
lz4 = ["compress", "dep:lz4_flex"]
postcard = ["dep:postcard", "dep:serde"]
zstd = ["compress", "dep:zstd"]
migrate = []
redb = ["dep:redb"]

[lints]
workspace = true
