[package]
name = "ssa-workflow-derive"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
workflow = { package = "ssa-workflow", path = "../ssa-workflow" }

[lints]
workspace = true
